pkg/lang/testdata/ub/body-meta/valid/action-timeout.ub
actions: { core.command.run: { @timeout: '30s' } }
