pkg/lang/testdata/ub/body-meta/invalid/action-timeout-bad-duration.ub
actions: { core.command.run: { @timeout: 'banana' } }
